# photocasio

./: .gitignore  CMakeLists.txt  LICENCE  README.md
assets-cg/: fxconv-metadata.txt  icon-cg.xcf
src/: config.h  draw.c  draw.h  main.c  storage.c  storage.h  text.c  text.h  utils.c  utils.h
